--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 search_exclude: true
 ---
 
-My Name is Prakash, working is a Senior Data Scientist at Fractal AI. You can reach out to me at vanapaliprakash@gamil.com 
+My Name is Prakash, working as a Senior Data Scientist at Fractal AI. You can reach me at vanapaliprakash@gamil.com 
 
 # Posts
