deploy: c58f9b9f3fc1f1ffc39045127a1822ac2126e417

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>My Name is Prakash, working is a Senior Data Scientist at Fractal AI. You can reach out to me at vanapaliprakash@gamil.com</p>
+        <div class="home"><p>My Name is Prakash, working as a Senior Data Scientist at Fractal AI. You can reach me at vanapaliprakash@gamil.com</p>
 
 <h1 id="posts">Posts</h1>
 
