--- a/search/index.html
+++ b/search/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://prakashjayy.github.io/carbon2silicon/search/" />
 <meta property="og:site_name" content="carbon2silicon" />
 <script type="application/ld+json">
-{"description":"An Mathematical perspective.","@type":"WebPage","url":"https://prakashjayy.github.io/carbon2silicon/search/","headline":"Search","@context":"https://schema.org"}</script>
+{"description":"An Mathematical perspective.","@type":"WebPage","headline":"Search","url":"https://prakashjayy.github.io/carbon2silicon/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/carbon2silicon/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://prakashjayy.github.io/carbon2silicon/feed.xml" title="carbon2silicon" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -32,7 +32,7 @@
 <meta property="og:url" content="https://prakashjayy.github.io/carbon2silicon/search/" />
 <meta property="og:site_name" content="carbon2silicon" />
 <script type="application/ld+json">
-{"description":"An Mathematical perspective.","@type":"WebPage","url":"https://prakashjayy.github.io/carbon2silicon/search/","headline":"Search","@context":"https://schema.org"}</script>
+{"description":"An Mathematical perspective.","@type":"WebPage","headline":"Search","url":"https://prakashjayy.github.io/carbon2silicon/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
